# lethe

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  ARCHITECTURE.md  BENCHMARKS.md  BENCHMARKS_RIF_CLUSTERED.md  BENCHMARKS_RIF_EXPLORE.md  BENCHMARKS_RIF_GAP.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  INSTRUCTIONS.md  README.md  RESEARCH_JOURNEY.md  paper.tex  pyproject.toml  release-please-config.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/workflows/: build-binaries.yml  ci.yml  publish-pypi.yml  release-artifacts-check.yml  release-homebrew.yml  release-npm.yml  release-please.yml  release-pypi.yml  release-rust.yml  release.yml
.omp-plugin/: marketplace.json
bench/: README.md  _lib.py  compare_longmemeval.sh  compare_pipeline.py  components.py  diff_lme.py  latency.py  longmemeval.py  prepare.py  prepare_lme_data.py  run_compare.sh  run_lme_python.py  validate_parity.py  validate_parity.sh
benchmarks/: README.md  _lib.py  components.py  latency.py  prepare.py  run_benchmark.py  run_bm25_tokenizer.py  run_int8.py  run_rif_benchmark.py  run_rif_clustered.py  run_rif_enriched.py  run_rif_explore.py  run_rif_explore_smart.py  run_rif_explore_threshold.py  run_rif_gap.py
benchmarks/results/: BENCHMARKS_BM25_TOKENIZER.md  BENCHMARKS_DEEP_PASS.md  (+9 more)
crates/lethe-bench/: Cargo.toml
crates/lethe-bench/src/: main.rs
crates/lethe-benchmark/: Cargo.toml
crates/lethe-benchmark/src/: main.rs
crates/lethe-claude-code/: Cargo.toml  README.md
crates/lethe-cli/: Cargo.toml  README.md
crates/lethe-cli/src/: main.rs  paths.rs
crates/lethe-cli/src/commands/: cleanup.rs  config.rs  dedupe.rs  expand.rs  index.rs  migrate.rs  mod.rs  projects.rs  reset.rs  search.rs  seed.rs  status.rs  store_helpers.rs  transcript_index.rs  tui.rs
crates/lethe-cli/tests/: smoke.rs
crates/lethe-codex/: Cargo.toml  README.md  build.rs
crates/lethe-codex/src/: main.rs  transcript.rs
crates/lethe-core/: Cargo.toml  README.md
crates/lethe-core/benches/: bench_bm25.rs  bench_faiss_flat.rs  bench_rif.rs  bench_rrf.rs
crates/lethe-core/src/: bm25.rs  db.rs  dedup.rs  encoders.rs  entry.rs  faiss_flat.rs  kmeans.rs  lib.rs  lock.rs  maintenance.rs  markdown_store.rs  memory_store.rs  npz.rs  registry.rs  reranker.rs  rif.rs  rrf.rs  tokenize.rs  transcript_index.rs  transcript_store.rs  union_store.rs
crates/lethe-core/tests/: npz_python_compat.rs
crates/lethe-node/: CHANGELOG.md  Cargo.toml  README.md  build.rs  index.d.ts  index.js  package-lock.json  package.json
crates/lethe-node/test/: smoke.mjs
crates/lethe-py/: Cargo.toml  README.md  build.rs  pyproject.toml
crates/lethe-py/src/: lib.rs
crates/lethe-tui/: Cargo.toml  README.md
crates/lethe-tui/src/: app.rs  lib.rs  main.rs  search_worker.rs  theme.rs  ui.rs
demo/: .gitignore  README.md  package.json  remotion.config.ts
demo_video_playground/: .gitignore  README.md  package.json  tsconfig.json
experiments/: data_prep.py  enrich_longmemeval.py  run_experiment.py
legacy/: pyproject.toml
legacy/benchmarks/: bootstrap_rif_gap_ci.py  run_deep_pass.py  run_lifecycle_benchmark.py  run_rif_enriched.py  run_rif_explore.py  run_rif_explore_smart.py  run_rif_explore_threshold.py  run_rif_explore_validation.py  run_rif_extended_metrics.py  run_rif_gap.py  run_rif_gap_nfcorpus.py  run_rif_sweep.py
legacy/benchmarks/_lib/: metrics.py
legacy/benchmarks/results/: BENCHMARKS_RIF_EXPLORE_THRESHOLD.md  BENCHMARKS_RIF_EXTENDED.md  BENCHMARKS_RIF_GAP.md  BENCHMARKS_RIF_GAP_NFCORPUS.md  BENCHMARKS_RIF_SWEEP.md  BENCHMARKS_RIF_VALIDATION.md  rif_gap_ci.md  rif_gap_ci_pairwise_gap.md  rif_gap_nfcorpus_ci.md  rif_gap_per_query.json  rif_gap_per_query_nfcorpus.json
legacy/lethe/: __init__.py  cli.py  dedup.py  encoders.py  enrichment.py  memory_store.py  reranker.py  rif.py  tui.py  union_store.py
legacy/scripts/: enrich_longmemeval.py
legacy/tests/: test_db.py  test_dedup.py  test_enrichment.py  test_entry.py  test_memory_store.py  test_metrics.py  test_pyo3_parity.py  test_reranker.py  test_rif.py  test_tui.py  test_union_store.py  test_vectors.py
migration_benchmarks/: README.md  _lib.py  latency.py  prepare.py
plugins/: CHANGELOG.md
release_artifacts/: lethe-claude-code-macos-arm64  lethe-linux-arm64.node  lethe-linux-x64.node  lethe-macos-arm64  lethe-macos-arm64.node  lethe-windows-arm64.node  lethe-windows-x64.node  lethe_memory-0.10.0-cp39-abi3-macosx_11_0_arm64.whl  lethe_memory-0.10.0-cp39-abi3-win_amd64.whl  lethe_memory-0.10.0-cp39-abi3-win_arm64.whl  lethe_memory-0.11.0-cp39-abi3-win_amd64.whl  lethe_memory-0.11.0-cp39-abi3-win_arm64.whl  lethe_memory-0.13.0-cp39-abi3-macosx_11_0_arm64.whl  lethe_memory-0.13.0-cp39-abi3-win_amd64.whl  lethe_memory-0.13.0-cp39-abi3-win_arm64.whl  lethe_memory-0.14.0-cp39-abi3-macosx_11_0_arm64.whl  lethe_memory-0.14.0-cp39-abi3-win_amd64.whl  lethe_memory-0.14.0-cp39-abi3-win_arm64.whl  lethe_memory-0.15.0-cp39-abi3-macosx_11_0_arm64.whl  lethe_memory-0.15.0-cp39-abi3-win_amd64.whl  lethe_memory-0.15.0-cp39-abi3-win_arm64.whl  lethe_memory-0.16.0-cp39-abi3-macosx_11_0_arm64.whl  lethe_memory-0.16.0-cp39-abi3-win_amd64.whl  lethe_memory-0.16.0-cp39-abi3-win_arm64.whl  lethe_memory-0.17.0-cp39-abi3-macosx_11_0_arm64.whl  lethe_memory-0.17.0-cp39-abi3-win_amd64.whl  lethe_memory-0.17.0-cp39-abi3-win_arm64.whl  lethe_memory-0.6.0-cp39-abi3-macosx_11_0_arm64.whl  lethe_memory-0.8.0-cp39-abi3-macosx_11_0_arm64.whl  lethe_memory-0.8.0-cp39-abi3-win_amd64.whl  lethe_memory-0.8.0-cp39-abi3-win_arm64.whl  lethe_memory-0.9.0-cp39-abi3-macosx_11_0_arm64.whl  lethe_memory-0.9.0-cp39-abi3-win_amd64.whl  lethe_memory-0.9.0-cp39-abi3-win_arm64.whl
research/: baselines.py  gc_store.py  graph.py  mlp_adapter.py  mutation.py  rescue_index.py  segmentation.py
scripts/: enrich_longmemeval.py
tests/: conftest.py  test_cli.py  test_markdown_store.py  test_memory_store.py  test_metrics.py  test_mutation.py  test_rif.py  test_store.py  test_vectors.py
video_playground/: README.md
(+96 files in other folders)
