# Cargo workspace for the Rust port of `lethe`.
#
# The Python implementation under `legacy/lethe/` remains the reference and
# continues to ship; this workspace lives alongside it. See plan in
# .claude/plans/functional-herding-boot.md for the porting contract.

[workspace]
resolver = "2"
members = [
    "crates/lethe-core",
    "crates/lethe-cli",
    "crates/lethe-tui",
    "crates/lethe-py",
    "crates/lethe-node",
    "crates/lethe-bench",
]

# One source of truth for the workspace version, propagated via
# `version.workspace = true` in each member crate. release-please bumps
# this line and the linked-versions config keeps PyPI/npm aligned.
[workspace.package]
version = "0.6.0"
edition = "2021"
license = "MIT"
authors = ["Teimur Gasanov"]
repository = "https://github.com/teimurjan/lethe"
rust-version = "1.94"

# Shared dependency versions so every crate links the same builds.
[workspace.dependencies]
ndarray = { version = "0.17", default-features = false, features = ["std", "rayon"] }
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sha1 = "0.10"
regex = "1.11"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
fs2 = "0.4"
duckdb = { version = "1.2", features = ["bundled"] }
ort = { version = "2.0.0-rc.10", default-features = false, features = ["std", "download-binaries", "ndarray", "tls-rustls"] }
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
hf-hub = { version = "0.4", default-features = false, features = ["ureq", "rustls-tls"] }
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "time"] }
anyhow = "1"
bincode = "1.3"
toml = "0.8"
walkdir = "2.5"
hex = "0.4"
once_cell = "1.20"
# npyz reads/writes numpy `.npy`/`.npz` files. Used so Rust and Python
# share `.lethe/index/embeddings.npz` byte-for-byte.
npyz = { version = "0.8", features = ["npz"] }

[workspace.lints.rust]
# `unsafe_code` is `deny` (not `forbid`) so individual crates that bind
# C libraries (`ort`, `napi-rs`) can `#[allow(unsafe_code)]` on the
# small surfaces that need it without forcing the whole workspace to
# match.
unsafe_code = "deny"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
# `clippy::all` (the standard category) is the strict floor we hold to.
# Pedantic is on but the noisy categories below are explicitly allowed
# because they fire on retrieval-math code without adding signal.
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
cast_possible_wrap = "allow"
should_implement_trait = "allow"
redundant_closure_for_method_calls = "allow"
similar_names = "allow"
needless_pass_by_value = "allow"
explicit_iter_loop = "allow"
implicit_hasher = "allow"
doc_markdown = "allow"
float_cmp = "allow"
many_single_char_names = "allow"
items_after_statements = "allow"
struct_field_names = "allow"
let_underscore_untyped = "allow"
return_self_not_must_use = "allow"
unreadable_literal = "allow"
