[package]
name = "lethe-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "LongMemEval bench harness for the Rust port. Outputs JSON for parity comparison."
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "lethe-bench"
path = "src/main.rs"

[dependencies]
lethe-core = { path = "../lethe-core" }
ndarray.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true

[lints]
workspace = true
