[package]
name = "lethe-py"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Python bindings for lethe-core (built via maturin, importable as `lethe_memory`)."
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "lethe_memory"
crate-type = ["cdylib"]

[dependencies]
lethe-core = { path = "../lethe-core" }
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }

[lints]
workspace = true
