[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "lethe-rust"
version = "0.6.0" # x-release-please-version
description = "PyO3 bindings to the lethe memory store."
requires-python = ">=3.9"
license = { text = "MIT" }

[tool.maturin]
module-name = "lethe_rust"
manifest-path = "Cargo.toml"
features = ["pyo3/extension-module"]
