[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "lethe-memory"
version = "0.6.0" # x-release-please-version
description = "Persistent memory store for LLM agents — Python bindings to the Rust lethe core."
requires-python = ">=3.9"
license = { text = "MIT" }

[tool.maturin]
module-name = "lethe_memory"
manifest-path = "Cargo.toml"
features = ["pyo3/extension-module"]
